# android-opencv-edge-detector

./: .gitignore  ANDROID_SDK_SETUP.md  PROJECT_SUMMARY.md  README.md  SETUP.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_renderer.cpp
app/src/main/java/com/opencv/edgedetector/: MainActivity.kt  NativeBridge.kt
app/src/main/java/com/opencv/edgedetector/camera/: CameraManager.kt
app/src/main/java/com/opencv/edgedetector/gl/: FpsCallback.kt  OpenGLSurfaceView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-xhdpi/: ic_launcher.xml
app/src/main/res/mipmap-xxhdpi/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
web/: index.html  package.json
web/src/: index.ts  viewer.ts
